<resources>
    <string name="title_login">Login</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_sign_up">Sign up</string>
    <string name="login_create_an_account">Create an account</string>
    <string name="login_sign_in_instead">Sign in instead</string>
    <string name="login_confirm_password_hint">Confirm Password</string>
    <string name="login_password_hint">Password</string>
    <string name="login_email_hint">Email</string>
    <string name="login_dialog_title">Remember user</string>
    <string name="login_dialog_message">¿Do you want yo remember your user and password?</string>
    <string name="login_dialog_possitive">Yes</string>
    <string name="login_dialog_negative">No</string>

</resources>